--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Custom React Module Demo</title>
+		<title>LOGORA - react-expandable-content</title>
+		<link rel="stylesheet" href="main.css">
 	</head>
 	<body>
-		<div id="app">Custom React Module Demo…</div>
+		<div id="app"></div>
 		<script src="index.js" type="text/javascript"></script>
 	</body>
 </html>
