--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Custom React Module Demo</title>
+		<title>react-expandable-content - Default example</title>
+		<link rel="stylesheet" href="../dist/default.css">
 	</head>
 	<body>
-		<div id="app">Custom React Module Demo…</div>
-		<script src="index.js" type="text/javascript"></script>
+		<div id="app"></div>
+		<script src="../dist/default.js" type="text/javascript"></script>
 	</body>
 </html>
